--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   </head>
   <body>
-    <h1>My main title</h1>
+    <h1>Github.io Webpage</h1>
     <h2>My top level heading</h2>
     <h3>My subheading</h3>
     <h4>My sub-subheading</h4>
