--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>My test page</title>
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css2?family=Allerta+Stencil&display=swap" rel="stylesheet">
-    <link href="styles/style.css" rel="stylesheet" type="text/css">
+<html lang="">
 
-  </head>
-  <body>
-    <h1>Github.io Webpage</h1>
-    <h2>My top level heading</h2>
-    <h3>My subheading</h3>
-    <h4>My sub-subheading</h4>
-
-    <img src="images/firefox-icon.png" alt="The Firefox logo: a flaming fox surrounding the Earth.">
-
-    <script src="scripts/main.js"></script>
-    <script src="scripts/sketch.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
-    <button>Change user</button>
-
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AMIGA Visualizer</title>
+  <style>
+    body {
+      padding: 0;
+      margin: 0;
+    }
+  </style>
+    <script src="https://cdn.jsdelivr.net/npm/mappa-mundi@0.0.4"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/p5.js"></script>
+    <script type="text/javascript" src="libraries/quicksettings.js"></script>
+    <script type="text/javascript" src="libraries/p5.gui.js"></script>
+    <script type="text/javascript" src="libraries/utmconv.js"></script>
+    <script src="tank.js"></script>
+    <script src="umd.js"></script>
+    <script src="sketch.js"></script>
+</head>
+<body>
+</body>
 </html>
